src/snapshots/heave__tests__petstore@updatePet_200.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/updatePet_200.hurl
---
PUT {{ baseurl }}/pet
Authorization: Bearer {{ authorization }}
Prefer: code=200
{
  "category": {
    "id": 0,
    "name": ""
  },
  "id": 0,
  "name": "",
  "photoUrls": [
    ""
  ],
  "status": "",
  "tags": [
    {
      "id": 0,
      "name": ""
    }
  ]
}
HTTP 200

[Asserts]
jsonpath "$" isCollection
#jsonpath "$.category" isCollection
#jsonpath "$.category.id" isInteger
#jsonpath "$.category.name" isString
#jsonpath "$.id" isInteger
jsonpath "$.name" isString
jsonpath "$.photoUrls" isCollection
#jsonpath "$.photoUrls[0]" isString
#jsonpath "$.status" isString
#jsonpath "$.tags" isCollection
#jsonpath "$.tags[0]" isCollection
#jsonpath "$.tags[0].id" isInteger
#jsonpath "$.tags[0].name" isString
