src/snapshots/heave__tests__petstore@updatePet_404.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/updatePet_404.hurl
---
PUT {{ baseurl }}/pet
Authorization: Bearer {{ authorization }}
Prefer: code=404
{
  "category": {
    "id": 0,
    "name": ""
  },
  "id": 0,
  "name": "",
  "photoUrls": [
    ""
  ],
  "status": "",
  "tags": [
    {
      "id": 0,
      "name": ""
    }
  ]
}
HTTP 404

