src/snapshots/heave__tests__petstore_graphql@fallibleGetPet.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore_graphql/fallibleGetPet.hurl
---
POST {{ baseurl }}
Authorization: Bearer {{ authorization }}
```graphql
query {
  fallibleGetPet {
    ... on Pet {
      id
      name
      tag
      friend {
        id
        name
        tag
        friend {
          id
          name
          tag
          friend {
            id
            name
            tag
            friend {
              id
              name
              tag
            }
          }
        }
      }
    }
    ... on Error {
      code
      message
    }
  }
}
```
HTTP 200
