src/snapshots/heave__tests__petstore_graphql@fallibleListPets.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore_graphql/fallibleListPets.hurl
---
POST {{ baseurl }}
Authorization: Bearer {{ authorization }}
```graphql
query {
  fallibleListPets {
    ... on PetsResponse {
      pets {
        id
        name
        tag
        friend {
          id
          name
          tag
          friend {
            id
            name
            tag
            friend {
              id
              name
              tag
            }
          }
        }
      }
      nextPage
    }
    ... on Error {
      code
      message
    }
  }
}
```
HTTP 200
