src/snapshots/heave__tests__petstore_graphql@getPet.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore_graphql/getPet.hurl
---
POST {{ baseurl }}
Authorization: Bearer {{ authorization }}
```graphql
query {
  getPet(id: {{ getPet_id }}) {
    id
    name
    tag
    friend {
      id
      name
      tag
      friend {
        id
        name
        tag
        friend {
          id
          name
          tag
          friend {
            id
            name
            tag
          }
        }
      }
    }
  }
}
```
HTTP 200
