src/snapshots/heave__tests__petstore_graphql@getPetById.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore_graphql/getPetById.hurl
---
POST {{ baseurl }}
Authorization: Bearer {{ authorization }}
```graphql
query getPetById {
  id
  name
  tag
}

```
HTTP 200
