src/snapshots/heave__tests__petstore_graphql@infallibleListPets.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore_graphql/infallibleListPets.hurl
---
POST {{ baseurl }}
Authorization: Bearer {{ authorization }}
```graphql
query {
  infallibleListPets(limit: {{ infallibleListPets_limit }}) {
    pets {
      id
      name
      tag
      friend {
        id
        name
        tag
        friend {
          id
          name
          tag
          friend {
            id
            name
            tag
          }
        }
      }
    }
    nextPage
  }
}
```
HTTP 200
